[package]
name = "crng"
version = "1.0.0"
edition = "2024"
description = "A quantum-based binary choice maker that performs coin tosses using quantum random number generators"
license = "MIT"
documentation = "https://docs.rs/crng"
homepage = "https://github.com/weezy20/crng"
repository = "https://github.com/weezy20/crng"
authors = ["Abhishek Shah <abhishekshah3@gmail.com>"]

[dependencies]
hex = "0.4.3"
rand = "0.9.1"
rayon = "1.10.0"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.9"
