[package]
name = "qcoin"
version = "1.1.0"
edition = "2024"
description = "A quantum-based binary choice maker that performs coin tosses using quantum random number generators"
license = "MIT"
documentation = "https://docs.rs/qcoin"
homepage = "https://github.com/weezy20/qcoin"
repository = "https://github.com/weezy20/qcoin"
authors = ["Abhishek Shah <abhishekshah3@gmail.com>"]
keywords = ["randomness", "quantum", "random", "coin-toss", "qrng", "entropy"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
hex = "0.4.3"
rand = "0.9.1"
rayon = "1.10.0"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.9"
